[package]
name = "worldlang"
version = "0.1.0"
authors = ["heartleth <62895113+heartleth@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.5"
text_io = "0.1.8"
json = "0.12.4"
handlebars = "*"
serde_json = "*"
serde = "*"